--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
   "name": "@ale3oulaa/str-kit",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "description": "Utility functions for string manipulation",
+  "license": "MIT",
+  "repository": "ale3oula/str-kit",
+  "main": "index.js",
+  "keywords": [
+    "npm", "package", "ale3oula", "string"
+  ]
 }
